# pm-rag

./: README.md  config.py  indexer.py  main.py  pyproject.toml  requirements.txt
src/: config.py
